--- a/src/components/ImageViewer/index.module.css
+++ b/src/components/ImageViewer/index.module.css
@@ -1,12 +1,22 @@
 .image-viewer {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
   transition: transform var(--transition-duration) var(--transition-easing);
 }
 
-.image-viewer img {
+.image-viewer .image {
+  width: 100%;
   height: 100%;
+  object-fit: contain;
+  max-width: none;
+  max-height: none;
+  position: relative;
+  touch-action: none;
+}
+
+.image-viewer .image:not(.image-drag) {
+  transition: top var(--transition-duration) var(--transition-easing),
+    left var(--transition-duration) var(--transition-easing),
+    transform var(--transition-duration) var(--transition-easing);
 }
