--- a/src/components/ImageViewer/index.module.css
+++ b/src/components/ImageViewer/index.module.css
@@ -6,17 +6,6 @@
 }
 
 .image-viewer .image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  max-width: none;
-  max-height: none;
-  position: relative;
-  touch-action: none;
-}
-
-.image-viewer .image:not(.image-drag) {
-  transition: top var(--transition-duration) var(--transition-easing),
-    left var(--transition-duration) var(--transition-easing),
-    transform var(--transition-duration) var(--transition-easing);
+  /* Why do I have to use !important... */
+  cursor: initial !important;
 }
