Add 'direction: ltr' to ImageViewer Fixes incorrect image placement on screen if page dir="rtl"

--- a/src/components/ImageViewer/index.module.css
+++ b/src/components/ImageViewer/index.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  direction: ltr;
   transition: transform var(--transition-duration) var(--transition-easing);
 }
 
